got testfx working (#15)
* got testfx working but main app is broken

* fixed game not starting

* added teardown step for testfx